[metadata]
name = python-scf
version = attr: scf.__version__
description = A small tool to fetch informations about CVE from suse.com.
long_description = file: README.md
keywords = suse, cve, security, cli
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = scf
install_requires =
    requests
    requests-cache
    beautifulsoup4
    fastapi
    pydantic
    python-dotenv
    typer
    uvicorn[standard]
    rich
    dynaconf
    toml

[options.package_data]
scf = settings.toml

[options.entry_points]
console_scripts =
    scf = scf.cli:app
