[metadata]
name = python-scf
version = attr: scf.__version__
author = dadav
author-email = dadav@protonmail.com
maintainer = dadav
maintainer-email = dadav@protonmail.com
homepage = https://scf.readthedocs.io/en/stable/
description = A small tool to fetch informations about CVE from suse.com.
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    suse
    cve
    security
    cli
project_urls =
    Bug Tracker = https://github.com/dadav/scf/issues
    Documentation = https://scf.readthedocs.io/en/stable/
    Source = https://github.com/dadav/scf
license = GPL
license_files =
    LICENSE
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = scf
python_requires = >=3.7, <4
install_requires =
    requests
    requests-cache
    beautifulsoup4
    fastapi
    pydantic
    python-dotenv
    typer
    uvicorn[standard]
    rich
    dynaconf
    toml

[options.package_data]
scf = settings.toml

[options.entry_points]
console_scripts =
    scf = scf.cli:app
